Fix link to point to github pages

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <a href="https://news.ycombinator.org">HN</a> or <a href="https://lobste.rs">Lobste.rs</a> might have a hard
         time
         since the only part of the URL that changes between posts is the
-        anchor (<kbd>https://scriptdevil.in/<u>#post-name</u></kbd>). But
+        anchor (<kbd>https://scriptdevil.github.io/<u>#post-name</u></kbd>). But
         then again, it isn't like I am making frontpage everyday. So who
         cares? There is also the problem of being indexed properly by search
         pages. Meh!
